cli/crates/zero-tui/tests/snapshots/snapshots__risk_overlay_l4_halted.snap
---
source: crates/zero-tui/tests/snapshots.rs
assertion_line: 660
expression: snap
---
18:30:00 deterministic test                                                     
                                                                                
                                                                                
          ┌ engine halted — risk context ────────────────────────────┐          
          │HARD STOP  engine halted; risk-reducing commands still go │          
          │                                                          │          
          │risk                                                      │          
          │  drawdown   5.40%   alert-at 5.00%   Δ -0.40pp           │          
          │  equity     $9460   peak $10000                          │          
          │  halt       HALTED — drawdown limit hit                  │          
          │                                                          │          
          │state                                                     │          
          │  label    TILT   friction L4   as-of 0s ago              │          
          │  velocity   1h=0 4h=0 24h=0                              │          
          │  re-entry   15m=0 30m=0 2h=0                             │          
          │  sleep      hours-since-rest=—                           │          
          │                                                          │          
          │press any key to close                                    │          
          └──────────────────────────────────────────────────────────┘          
                                                                                
                                                                                
                                                                                
>                                                                               
 [CONV] engine:DOWN  feed:0s  rate:?  hl:?  dd:HALT  ops:TILT
