cli/crates/zero-tui/tests/snapshots/snapshots__widget_calibration_insufficient.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
 calib  (insufficient data — need ≥30 graded decisions, have 12)
