cli/crates/zero-tui/tests/snapshots/snapshots__widget_calibration_ok.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
 calib  [■■■■■■■■■■■■■■□□□□□□]  pred 72% / obs 68%  n=134
