cli/crates/zero-tui/tests/snapshots/snapshots__widget_verdict_empty.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
 (no verdict — `/evaluate <coin>` to request one)
