cli/crates/zero-tui/tests/snapshots/snapshots__widget_verdict_pass.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
 PASS  BTC conf 72%                                         
 ├─ layer_0    : PASS                                       
 ├─ layer_1    : PASS                                       
 └─ layer_2    : PASS                                       
 rationale: direction LONG · regime trending · consensus 8
